# modbus-rs

./: Cargo.toml
examples/: partial-response-server.rs  speed.rs  tcp-client-framed.rs  tcp-client-raw.rs  tcp-client.rs  tcp-server.rs
src/: error.rs  exception_code.rs  lib.rs
src/adu/tcp/: header.rs  request.rs  response.rs
src/pdu/: coil.rs  coils.rs  exception_response.rs  function_code.rs  mod.rs  request.rs  response.rs  word.rs  words.rs
