[package]
name = "modbus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[features]
alloc = []

[[example]]
name = "tcp-client"
path = "examples/tcp-client.rs"

[[example]]
name = "tcp-client-framed"
path = "examples/tcp-client-framed.rs"
